# nccl-tutorial

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
cmake/: FindNCCL.cmake
csrc/: allReduce.cpp  main.cpp  sendRecv.cpp
include/: allReduceMPI.hpp  main.hpp  sendRecv.hpp  utils.hpp
mt_md/: CMakeLists.txt
mt_md/csrc/: allGatherMPI.cpp  allReduceMPI.cpp  main.cpp  sendRecvMPI.cpp
mt_md/include/: allGatherMPI.hpp  allReduceMPI.hpp  sendRecvMPI.hpp  utilsMPI.hpp
st_md/: CMakeLists.txt
st_md/csrc/: allReduce.cpp  main.cpp  sendRecv.cpp
st_md/include/: allReduce.hpp  sendRecv.hpp  utils.hpp
