[project]
name = "nccl-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.7.1+cu118",
    "numpy<2.0.0",
    "cmake>=4.1.2",
]

[tool.uv.sources]
torch = {index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
